# VINS

./: .clang-format  README.md  VINS_Update.md
ar_demo/: CMakeLists.txt
benchmark_publisher/launch/: publish.launch
camera_model/: CMakeLists.txt
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/chessboard/: Chessboard.cc
config/: d435i.rviz  u60.rviz  video.rviz
config/3dm/: 3dm_config.yaml
config/black_box/: black_box_config.yaml
config/cla/: cla_config.yaml
config/euroc/: euroc_config.yaml  euroc_config_no_extrinsic.yaml
config/metoak/: vio_u60.yaml  vio_u60_rgbd.yaml
config/realsense/: realsense_color_config.yaml  realsense_fisheye_config.yaml  vio.yaml  vio_d435i.yaml  vio_d435i_rgbd.yaml
config/tum/: tum_config.yaml
config/tum_rgbd/: tum_fr3.yaml  tum_fr3_atlas.yaml
pose_graph/: CMakeLists.txt  nodelet_plugin.xml
pose_graph/include/keyframe/: keyframe.h
pose_graph/include/pose_graph/: pose_graph.h
pose_graph/src/keyframe/: keyframe.cpp
pose_graph/src/pose_graph/: pose_graph.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp
vins/: CMakeLists.txt  package.xml
vins/include/estimator/: estimator.h
vins/include/factor/: imu_factor.h  marginalization_factor.h  projection_td_factor.h
vins/include/feature_manager/: feature_manager.h
vins/include/feature_tracker/: feature_parameters.h  feature_tracker.h
vins/include/initial/: initial_alignment.h
vins/include/pose_graph/: PoseGraphCameraPoseVisualization.h  keyframe.h  pose_parameters.h
vins/include/utility/: estimator_parameters.h  tic_toc.h
vins/launch/: 3dm.launch  black_box.launch  cla.launch  euroc.launch  euroc_no_extrinsic_param.launch  realsense_color.launch  realsense_fisheye.launch  tum.launch
vins/launch/black_box/: black_box.launch
vins/launch/cla/: cla.launch
vins/launch/euroc/: euroc.launch  euroc_no_extrinsic_param.launch
vins/launch/metoak/: vio_u60.launch  vio_u60_rgbd.launch
vins/launch/realsense/: realsense_color.launch  realsense_fisheye.launch  vio_d435i.launch  vio_d435i_rgbd.launch
vins/launch/tum/: tum.launch
vins/src/estimator/: estimator.cpp  estimator_node.cpp  estimator_rgbd_node.cpp
vins/src/factor/: projection_factor.cpp  projection_td_factor.cpp
vins/src/feature_manager/: feature_manager.cpp
vins/src/feature_tracker/: feature_parameters.cpp  feature_tracker.cpp  feature_tracker_node.cpp  feature_tracker_rgbd_node.cpp
vins/src/pose_graph/: keyframe.cpp  pose_graph_node.cpp
vins/src/utility/: CameraPoseVisualization.cpp  estimator_parameters.cpp  visualization.cpp
vins_estimator/: CMakeLists.txt  nodelet_description.xml  package.xml
vins_estimator/include/estimator/: estimator.h
vins_estimator/include/factor/: imu_factor.h  imu_factor_modified.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.h  projection_factor.h  projection_td_factor.h
vins_estimator/include/feature_manager/: feature_manager.h
vins_estimator/include/feature_tracker/: feature_tracker.h
vins_estimator/include/initial/: initial_alignment.h  initial_ex_rotation.h  solve_5pts.h
vins_estimator/include/pose_graph/: pose_graph.h
vins_estimator/include/utility/: estimator_parameters.h  parameters.h  visualization.h
vins_estimator/launch/: euroc.launch  vins_rviz_u60.launch
vins_estimator/launch/metoak/: vio_u60.launch
vins_estimator/launch/realsense/: realsense_vio.launch
vins_estimator/launch/tum_rgbd/: tum_rgbd_pytorch.launch
vins_estimator/src/: estimator_nodelet.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator_node.cpp
vins_estimator/src/factor/: marginalization_factor.cpp  pose_local_parameterization.cpp  projection_factor.cpp  projection_td_factor.cpp
vins_estimator/src/feature_manager/: feature_manager.cpp
vins_estimator/src/feature_tracker/: feature_tracker.cpp  feature_tracker_node.cpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
vins_estimator/src/pose_graph/: PoseGraphCameraPoseVisualization.cpp  keyframe.cpp  pose_graph.cpp  pose_graph_node.cpp
vins_estimator/src/utility/: CameraPoseVisualization.cpp  parameters.cpp  utility.cpp  visualization.cpp
