<?xml version="1.0"?>
<package>
    <name>vins_estimator</name>
    <version>1.0.0</version>
    <description>The vins_estimator package</description>
    <maintainer email="quitezeal@gmail.com">YOUNG</maintainer>
    <license>LGPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>camera_model</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>camera_model</run_depend>

    <build_depend>nodelet</build_depend>
    <run_depend>nodelet</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_description.xml"/>
    </export>
</package>
